--- a/data/index.html
+++ b/data/index.html
@@ -1,18 +1,43 @@
 <!DOCTYPE html>
+<html>
 <head>
   <title>ESP32 Autonomous Irrigation System</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
   <div class="container">
+    <div class="table-wrapper">
+      <h2>Watering & Moisture Log</h2>
+
+      <table id="log">
+        <thead>
+          <tr>
+            <th>Date/Time</th>
+            <th>Moisture</th>
+            <th>Action</th>
+          </tr>
+        </thead>
+        <tbody id="logTable">
+          <tr>
+            <td>--</td>
+            <td>--</td>
+            <td>--</td>
+          </tr>
+        </tbody>
+      </table>
+
+    </div>
+
+
     <img id="plantImg" src="imgs/plant.png"><br>
+
     <button id="waterBtn"></button>
     <p id="status">PUMP OFF</p>
-
     <p id="moistureValue">Moisture: --</p>
-    <p id="waterValue">Last Water Duration: --</p>
+    <p id="waterValue">Last Watered: --</p>
   </div>
 
-  <script src="/script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
